--- a/client/index.html
+++ b/client/index.html
@@ -19,23 +19,25 @@
                     <img class="info" src="images/info.svg" alt="info">
                 </div>
                 <div class="body">
-                    <div class="left">
+                    <div class="left flowmetertypes-left">
                         <div class="label first">Technology:</div>
-                        <div class="label second">Product line:</div>
+                        <!--<div class="label second">Product line:</div>-->
                     </div>
                     <div class="middle">
-                        <div>
-                            <select class="styled-select light big first technology" id="technologyChoice">
-                                  <option value="0" id="0">Please select one technology!</option>
-                                  <option value="1" id="1">Coriolis mass flowmeter (RotaMass)</option>
-                                  <option value="2" id="2">Variable Area Flowmeter (Rotameter)</option>
-                                  <option value="3" id="3">Vortex flowmeter</option>
-                                  <option value="4" id="4">Magmeter</option>
-                            </select>
+                        <div class="technology">
+                            <!--
+                          <select class="styled-select light big first technology-select">
+                                <option value="0">Please select one technology!</option>
+                                <option value="1">Coriolis mass flowmeter (RotaMass)</option>
+                                <option value="2">Variable Area Flowmeter (Rotameter)</option>
+                                <option value="3">Vortex flowmeter</option>
+                                <option value="4">Magmeter</option>
+                          </select>
+                        -->
                         </div>
                         <div class="productline">
                             <!--
-                            <select class="styled-select light big disabled productline" name="productline" form="calculateform" disabled>
+                            <select class="styled-select light big disabled productline-select" name="productline" form="calculateform" disabled>
                               <option value="rm3">RotaMass 3</option>
                               <option value="all">All</option>
                               <option value="rm4">RotaMass 4</option>
@@ -46,7 +48,7 @@
                         </div>
                     </div>
                     <div class="right">
-                        <div class="device">
+                        <div class="productline-image">
                             <!-- <img class="rotamass first" src="images/Rotamass3.svg" alt="rotamass3"> -->
                         </div>
                     </div>
@@ -65,10 +67,10 @@
                         <div class="label first"> Fluid type:</div>
                     </div>
                     <div class="middle">
-                        <input class="regular-radio first fluid" type="radio" id="radio-liquid" name="fluid-type" value="liquid" checked/>
+                        <input class="regular-radio first fluid-input" type="radio" id="radio-liquid" name="fluid-type" value="liquid" checked/>
                         <label class="first" for="radio-liquid"></label>
                         <span class="radio-tag">Liquid</span>
-                        <input class="regular-radio first fluid" type="radio" id="radio-gas" name="fluid-type" value="gas" />
+                        <input class="regular-radio first fluid-input" type="radio" id="radio-gas" name="fluid-type" value="gas" />
                         <label class="first gas" for="radio-gas"></label>
                         <span class="radio-tag gas">Gas</span>
                     </div>
@@ -86,26 +88,30 @@
                     </div>
                     <div class="middle">
                         <div class="fluid-name" id="fluidName">
+                            <!--
                             <select class="styled-select light big first" name="fluid" form="calculateform">
                               <option value="1">water</option>
                               <option value="2">propanol</option>
                               <option value="3">toluene</option>
                               <option value="4">acetone</option>
                             </select>
+                          -->
                         </div>
-                        <div class="fluid-formula" id="fluidFormula>
+                        <div class="fluid-formula" id="fluidFormula">
+                            <!--
                             <select class=" styled-select light big " name="formula " form="calculateform ">
                               <option value="1 ">H2O</option>
                               <option value="2 ">C3H7OH</option>
                               <option value="3 ">C6H5CH3</option>
                               <option value="4 ">CH3COCH3</option>
                             </select>
+                          -->
                         </div>
                     </div>
-                    <div class="right ">
-                        <span class="checkbox-tag ">Custom fluid</span>
-                        <input type="checkbox " id="checkbox-1-1 " class="regular-checkbox " name="customfluid " value="custom " checked=" " />
-                        <label for="checkbox-1-1 "></label>
+                    <div class="right">
+                        <span class="checkbox-tag">Custom fluid</span>
+                        <input type="checkbox" id="checkbox-1-1" class="regular-checkbox" name="customfluid" value="custom" />
+                        <label for="checkbox-1-1"></label>
                     </div>
                 </div>
             </div>
@@ -113,34 +119,34 @@
 
 
 
-            <div class="box fourth ">
-                <div class="body ">
-                    <div class="left ">
-                        <div class="label first "> Temperature:</div>
-                        <div class="label second "> Pressure:</div>
-                        <div class="label second "> Dynamic viscosity:</div>
-                        <div class="label second "> Operating density:</div>
+            <div class="box fourth">
+                <div class="body">
+                    <div class="left">
+                        <div class="label first"> Temperature:</div>
+                        <div class="label second"> Pressure:</div>
+                        <div class="label second"> Dynamic viscosity:</div>
+                        <div class="label second"> Operating density:</div>
                     </div>
-                    <div class="middle ">
-                        <div class="first ">
-                            <span class="label ">Minimum</span>
-                            <span class="label first ">Operating</span>
-                            <span class="label second ">Maximum</span>
+                    <div class="middle">
+                        <div class="first">
+                            <span class="label">Minimum</span>
+                            <span class="label first">Operating</span>
+                            <span class="label second">Maximum</span>
                         </div>
                         <div>
-                            <input class="text small " id="tempMin " name="temperaturmin " />
-                            <input class="text small operating-temperature " id="tempOp " name="temperaturop " value="20 " />
-                            <input class="text small " id="tempMax " name="temperaturmax " />
-                            <select class="styled-select light small tupl " name="temeraturscala " form="calculateform ">
-                            <option value="celsius ">°C</option>
-                            <option value="kelvin ">K</option>
-                            <option value="fahrenheit ">°F</option>
+                            <input class="text small" id="tempMin" name="temperaturmin" />
+                            <input class="text small operating-temperature" id="tempOp" name="temperaturop" value="" />
+                            <input class="text small" id="tempMax" name="temperaturmax" />
+                            <select class="styled-select light small tupl" name="temeraturscala" form="calculateform">
+                            <option value="celsius">°C</option>
+                            <option value="kelvin">K</option>
+                            <option value="fahrenheit">°F</option>
                           </select>
                         </div>
                         <div>
-                            <input class="text small " id="pressMin " name="pressuremin " />
-                            <input class="text small operating-pressure " id="pressOp " name="pressureop " value="5 " />
-                            <input class="text small " id="pressMax " name="pressuremax " />
+                            <input class="text small " id="pressMin" name="pressuremin " />
+                            <input class="text small operating-pressure " id="pressOp" name="pressureop " value="" />
+                            <input class="text small " id="pressMax" name="pressuremax " />
                             <select class="styled-select light small tupl " name="pressurescala " form="calculateform ">
                             <option value="bar ">bar</option>
                             <option value="kpa ">KPa</option>
@@ -148,15 +154,15 @@
                           </select>
                         </div>
                         <div>
-                            <input class="text big disabled dynamic-viscosity " id="viscosity " readonly="readonly " name="dynamicvis " value="1 " />
-                            <select class="styled-select light small " name="dynamicvisscala ">
-                            <option value="mpas ">mPas</option>
-                            <option value="pas ">Pas</option>
-                            <option value="kgms ">kg/ms</option>
+                            <input class="text big disabled dynamic-viscosity" id="viscosity" readonly="readonly" name="dynamicvis" value="1" />
+                            <select class="styled-select light small" name="dynamicvisscala">
+                            <option value="mpas">mPas</option>
+                            <option value="pas">Pas</option>
+                            <option value="kgms">kg/ms</option>
                           </select>
                         </div>
                         <div>
-                            <input class="text big disabled operating-density " id="density " readonly="readonly " name="operatingden " value="1 " />
+                            <input class="text big disabled operating-density " id="density" readonly="readonly " name="operatingden " value="1 " />
                             <select class="styled-select light small " name="operatingdenscala " form="calculateform ">
                             <option value="kgl ">kg/l</option>
                             <option value="kgm3 ">kg/m<sup>3</sup></option>
@@ -189,10 +195,10 @@
                     </div>
                     <div class="middle ">
                         <div>
-                            <input class="regular-radio first " type="radio " id="radio-volume " name="kind-of-flow " value="volume " />
+                            <input class="regular-radio first " type="radio " id="radio-volume" name="kind-of-flow " value="volume " />
                             <label class="first " for="radio-volume "></label>
                             <span class="radio-tag ">Volume flow</span>
-                            <input class="regular-radio first " type="radio " id="radio-mass " name="kind-of-flow " value="mass " checked/>
+                            <input class="regular-radio first " type="radio " id="radio-mass" name="kind-of-flow " value="mass " checked/>
                             <label class="first mass " for="radio-mass "></label>
                             <span class="radio-tag mass ">Mass flow</span>
                         </div>
@@ -203,10 +209,10 @@
                             <span class="label third ">Design</span>
                         </div>
                         <div>
-                            <input class="text small " name="flowratemin " id="frMin " />
-                            <input class="text small " name="flowrateop " id="frOp " />
-                            <input class="text small " name="flowratemax " id="frMax " />
-                            <input class="text middle " name="flowratedes " id="frDes " />
+                            <input class="text small " name="flowratemin " id="frMin" />
+                            <input class="text small " name="flowrateop " id="frOp" />
+                            <input class="text small " name="flowratemax " id="frMax" />
+                            <input class="text middle " name="flowratedes " id="frDes" />
                         </div>
                     </div>
                     <div class="right ">
@@ -266,7 +272,7 @@
 
             <div class="footer ">
                 <div>
-                    <input id="calculateInput " type="image " src="images/Calculate.svg " alt="calculate ">
+                    <input id="calculateInput " type="image" src="images/Calculate.svg " alt="calculate ">
                     <span class="calc "> Calculate</span>
                     <img class="reset " src="images/Reset.svg " alt="reset ">
                     <span class="reset "> Reset</span>
