--- a/client/index.html
+++ b/client/index.html
@@ -26,14 +26,15 @@
                     <div class="middle">
                         <div class="technology">
                             <!--
-                          <select class="styled-select light big first technology-select">
-                                <option value="0">Please select one technology!</option>
+                            <select id="technologyChoice" class="styled-select light big first technology-select">
+                              <option value="0">Please select one technology!</option>
                                 <option value="1">Coriolis mass flowmeter (RotaMass)</option>
                                 <option value="2">Variable Area Flowmeter (Rotameter)</option>
                                 <option value="3">Vortex flowmeter</option>
                                 <option value="4">Magmeter</option>
+
                           </select>
-                        -->
+-->
                         </div>
                         <div class="productline">
                             <!--
@@ -291,6 +292,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js "></script>
 <script src="https://cdn.socket.io/socket.io-1.4.5.js "></script>
 <script src="app.js "></script>
+<script src="adjustLayoutIfCustomFluid.js"></script>
 </body>
 
 </html>
