--- a/client/index.html
+++ b/client/index.html
@@ -196,10 +196,10 @@
                     </div>
                     <div class="middle ">
                         <div>
-                            <input class="regular-radio first" type="radio" id="radio-volume" name="kind-of-flow" value="volume" />
+                            <input class="regular-radio first" type="radio" id="radio-volume" name="kind-of-flow" value="volume" checked/>
                             <label class="first" for="radio-volume"></label>
                             <span class="radio-tag">Volume flow</span>
-                            <input class="regular-radio first" type="radio" id="radio-mass" name="kind-of-flow" value="mass" checked/>
+                            <input class="regular-radio first" type="radio" id="radio-mass" name="kind-of-flow" value="mass" />
                             <label class="first mass" for="radio-mass"></label>
                             <span class="radio-tag mass">Mass flow</span>
                         </div>
